--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
 .DS_Store
+*.vs
+*.exe
+*.sdf
+*.opensdf
+*.zip
+*.suo
+*.ncb
+*.vcproj.*
+*.pkg
+*.dmg
+*.depend
+*.layout
+*.mode1v3
+*.db
+*.LSOverride
+*.xcuserdata
+*.xcschememanagement.plist
+Plugin/iPlug2_Project/build-*
+Plugin/iPlug2_Project/ipch/*
+Plugin/iPlug2_Project/gui/*
+
+Icon?
+.DS_Stor*
