Add new controls to GUI

--- a/Plugin/NNComp/config/NNComp-mac.xcconfig
+++ b/Plugin/NNComp/config/NNComp-mac.xcconfig
@@ -17,14 +17,14 @@ BINARY_NAME = NNComp
 // HEADER AND LIBRARY SEARCH PATHS
 EXTRA_INC_PATHS = $(IGRAPHICS_INC_PATHS)
 EXTRA_LIB_PATHS = $(IGRAPHICS_LIB_PATHS)
-EXTRA_LNK_FLAGS = -framework Metal -framework MetalKit -framework OpenGL -framework Accelerate //$(IGRAPHICS_LNK_FLAGS)
+EXTRA_LNK_FLAGS = -framework Metal -framework MetalKit -framework OpenGL -framework Accelerate $(IGRAPHICS_LNK_FLAGS)
 
 // EXTRA_APP_DEFS =
 // EXTRA_PLUGIN_DEFS =
 
 //------------------------------
 // PREPROCESSOR MACROS
-EXTRA_ALL_DEFS = OBJC_PREFIX=vNNComp SWELL_APP_PREFIX=Swell_vNNComp IGRAPHICS_NANOVG IGRAPHICS_METAL
+EXTRA_ALL_DEFS = OBJC_PREFIX=vNNComp SWELL_APP_PREFIX=Swell_vNNComp IGRAPHICS_SKIA IGRAPHICS_METAL
 //EXTRA_DEBUG_DEFS =
 //EXTRA_RELEASE_DEFS =
 //EXTRA_TRACER_DEFS =
@@ -41,7 +41,7 @@ RELEASE_OPTIMIZE = 3 //0,1,2,3,s
 
 //------------------------------
 // DEBUG BUILD OPTIONS
-DEBUG_OPTIMIZE = 3 //0,1,2,3,s
+DEBUG_OPTIMIZE = 0 //0,1,2,3,s
 
 //------------------------------
 // MISCELLANEOUS COMPILER OPTIONS
