--- a/Plugin/NNComp/resources/NNComp-macOS-AUv3-Info.plist
+++ b/Plugin/NNComp/resources/NNComp-macOS-AUv3-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>NNComp</string>
 	<key>CFBundleGetInfoString</key>
-	<string>NNComp v1.0.0 Copyright 2020 Acme Inc</string>
+	<string>NNComp v1.0.0 Copyright 2023 Michael Holmes</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.michaelholmes.app.NNComp.AUv3</string>
 	<key>CFBundleInfoDictionaryVersion</key>
