--- a/.github/workflows/build-native.yml
+++ b/.github/workflows/build-native.yml
@@ -32,20 +32,20 @@ jobs:
 
     - name: Get VST3 SDK
       run: |
-        cd iPlug2/Dependencies/IPlug
+        cd Plugin/iPlug2/Dependencies/IPlug
         ./download-iplug-sdks.sh
       shell: bash
 
     - name: Get Prebuilt Libs
       run: |
-        cd iPlug2/Dependencies
+        cd Plugin/iPlug2/Dependencies
         ./download-prebuilt-libs.sh
       shell: bash
 
     - name: Build macOS
       if: matrix.os == 'macOS-latest'
       run: |
-        cd ${{env.PROJECT_NAME}}/scripts
+        cd Plugin/${{env.PROJECT_NAME}}/scripts
         ./makedist-mac.sh full zip
       shell: bash
 
@@ -56,7 +56,7 @@ jobs:
     - name: Build Windows
       if: matrix.os == 'windows-latest'
       run: |
-        cd ${{env.PROJECT_NAME}}\scripts
+        cd Plugin\${{env.PROJECT_NAME}}\scripts
         .\makedist-win.bat full zip
       shell: pwsh
 
